# UD2D_Kit

./: .gitignore  DOWNLOAD_AND_CONVERT_USAGE.md  GENERATE_QA_USAGE.md  PALO_LINKS_to_Scrape.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md  plan-confirm-action.prompt.md
crawl/: __init__.py  __main__.py  arguments.py  crawler.py  main.py  models.py  utils.py
docs/: crawl4ai_custom_context.md  markitdown.md  openai_structure_output.md  openai_text.md
download_and_convert/: __init__.py  __main__.py  arguments.py  converter.py  downloader.py  link_utils.py  main.py
generate_qa/: __init__.py  __main__.py  arguments.py  file_utils.py  main.py  markdown_processor.py  models.py  openai_utils.py  pdf_processor.py  pdf_utils.py
palo-web/: en.html  en_about-us.html  en_blog_gen-e2.html  en_case-study_pernod-ricard.html  en_case-study_singapore-airlines.html  en_case-study_the-1.html  en_contact-us.html  en_eventinfo.html  en_services.html  en_services_academy-trainings.html  en_services_artificial-intelligence.html  en_services_data-management_esg-data-management-report.html  en_services_digital-transformation.html  en_services_digital-transformation_github-copilot-adoption.html  en_work.html  github-devx-sg_events_307779362.html
palo-web-md/: en.md  en_about-us.md  en_blog_gen-e2.md  en_case-study_pernod-ricard.md  en_case-study_singapore-airlines.md  en_case-study_the-1.md  en_contact-us.md  en_eventinfo.md  en_services.md  en_services_academy-trainings.md  en_services_artificial-intelligence.md  en_services_data-management_esg-data-management-report.md  en_services_digital-transformation.md  en_services_digital-transformation_github-copilot-adoption.md  en_work.md  github-devx-sg_events_307779362.md  sample.md
qa_dataset/: qa_pairs_20250522_112811.jsonl  (+2 more)
run_all/: __init__.py  (+3 more)
